--- a/lib/active_shipping/shipping/carriers/dhl/templates/quote.xml.erb
+++ b/lib/active_shipping/shipping/carriers/dhl/templates/quote.xml.erb
@@ -17,8 +17,8 @@
             <Date><%= ready_date %></Date>
             <ReadyTime><%= ready_time %></ReadyTime>
             <ReadyTimeGMTOffset>+00:00</ReadyTimeGMTOffset>
-            <DimensionUnit><%= dimensions_unit %></DimensionUnit>
-            <WeightUnit><%= weight_unit %></WeightUnit>
+            <DimensionUnit>CM</DimensionUnit>
+            <WeightUnit>KG</WeightUnit>
             <Pieces>
               <Piece>
                 <% if @pieces %>
