--- a/lib/active_shipping/shipping/carriers/fedex/templates/shipment.xml.erb
+++ b/lib/active_shipping/shipping/carriers/fedex/templates/shipment.xml.erb
@@ -12,6 +12,11 @@
         <AccountNumber><%= @accountNumber %></AccountNumber>
         <MeterNumber><%= @meterNumber %></MeterNumber>
       </ClientDetail>
+      <% if @transactionId -%>
+        <TransactionDetail>
+          <CustomerTransactionId><%= @transactionId %></CustomerTransactionId>
+        </TransactionDetail>
+      <% end %>
       <Version>
         <ServiceId>crs</ServiceId>
         <Major>13</Major>
@@ -34,13 +39,57 @@
           </TotalInsuredValue>
         <% end %>        
         <Shipper>
+          <% if @contact_shipper_fullname -%>
+            <Contact>
+              <% if @contact_shipper_fullname -%>
+                <PersonName><%= @contact_shipper_fullname %></PersonName>
+              <% end %>
+              <% if @contact_shipper_company -%>
+                <CompanyName><%= @contact_shipper_company %></CompanyName>
+              <% end %>              
+              <% if @contact_shipper_phonenumber -%>
+                <PhoneNumber><%= @contact_shipper_phonenumber %></PhoneNumber>            
+              <% end %>
+              <% if @contact_shipper_phonenumber_ext -%>  
+                <PhoneExtension><%= @contact_shipper_phonenumber_ext %></PhoneExtension>                        
+              <% end %>
+            </Contact>
+          <% end %>
           <Address>
+            <% if @shipper_address_line -%>
+              <StreetLines><%= @shipper_address_line %></StreetLines>
+            <% end %>
+            <% if @shipper_city -%>
+              <City><%= @shipper_city %></City>
+            <% end %>
             <PostalCode><%= @shipper_postalcode %></PostalCode>
             <CountryCode><%= @shipper_countrycode %></CountryCode>
           </Address>
         </Shipper>
         <Recipient>
+          <% if @contact_recipient_fullname -%>
+            <Contact>
+              <% if @contact_recipient_fullname -%>
+                <PersonName><%= @contact_recipient_fullname %></PersonName>
+              <% end %>
+              <% if @contact_recipient_company -%>
+                <CompanyName><%= @contact_recipient_company %></CompanyName>
+              <% end %>
+              <% if @contact_recipient_phonenumber -%>            
+                <PhoneNumber><%= @contact_recipient_phonenumber %></PhoneNumber>            
+              <% end %>
+              <% if @contact_recipient_phonenumber_ext -%>
+                <PhoneExtension><%= @contact_recipient_phonenumber_ext %></PhoneExtension>                        
+              <% end %>
+            </Contact>
+          <% end %>
           <Address>
+            <% if @recipient_address_line -%>            
+              <StreetLines><%= @recipient_address_line %></StreetLines>
+            <% end %>
+            <% if @recipient_city -%>            
+              <City><%= @recipient_city %></City>
+            <% end %>
             <PostalCode><%= @recipient_postalcode %></PostalCode>
             <CountryCode><%= @recipient_countrycode %></CountryCode>
             <Residential>true</Residential>
