--- a/lib/active_shipping/shipping/carriers/fedex/templates/quote.xml.erb
+++ b/lib/active_shipping/shipping/carriers/fedex/templates/quote.xml.erb
@@ -46,7 +46,7 @@
             <Residential>true</Residential>
           </Address>
         </Recipient>
-        <RateRequestTypes>ACCOUNT</RateRequestTypes>
+        <RateRequestTypes>LIST</RateRequestTypes>
         <PackageCount><%= @package_count %></PackageCount>
         <% if @packages %>
           <RequestedPackageLineItems>                    
