--- a/lib/active_shipping/shipping/carriers/fedex/templates/quote.xml.erb
+++ b/lib/active_shipping/shipping/carriers/fedex/templates/quote.xml.erb
@@ -47,7 +47,7 @@
         </Recipient>
         <RateRequestTypes>LIST</RateRequestTypes>
         <PackageCount><%= @package_count %></PackageCount>
-        <% if @packages %>
+        <% if @packages && @package_count > 0 %>
           <RequestedPackageLineItems>                    
             <% @packages.each do |package| -%>
               <GroupPackageCount><%= package.quantity %></GroupPackageCount>
