--- a/lib/active_shipping/shipping/carriers/fedex/templates/shipment.xml.erb
+++ b/lib/active_shipping/shipping/carriers/fedex/templates/shipment.xml.erb
@@ -123,25 +123,31 @@
         </LabelSpecification>                               
         <RateRequestTypes>ACCOUNT</RateRequestTypes>
         <PackageCount><%= @package_count %></PackageCount>
-          <RequestedPackageLineItems>            
-            <GroupPackageCount><%= @package.quantity %></GroupPackageCount>
-            <% if @insured_value && @insured_currency %>            
-              <InsuredValue>
-                <Currency><%= @insured_currency %></Currency>
-                <Amount><%= @insured_value %></Amount>
-              </InsuredValue>                         
-            <% end %>  
-            <Weight>
-              <Units>KG</Units>
-              <Value><%= @package.weight -%></Value>
-            </Weight>
-            <Dimensions>
-              <Length><%= @package.length -%></Length>
-              <Width><%= @package.width -%></Width>
-              <Height><%= @package.height -%></Height>
-              <Units>CM</Units>
-            </Dimensions>  
-          </RequestedPackageLineItems>          
+        <% if @packages && @package_count > 0 %>
+          <% @packages.each do |package| -%>
+            <RequestedPackageLineItems>                    
+              <GroupPackageCount><%= package.quantity %></GroupPackageCount>
+              <% if @insured_value && @insured_currency %>            
+                <InsuredValue>
+                  <Currency><%= @insured_currency %></Currency>
+                  <Amount><%= @insured_value %></Amount>
+                </InsuredValue>                         
+              <% end %>              
+              <Weight>
+                <Units>KG</Units>
+                <Value><%= package.weight -%></Value>
+              </Weight>
+              <% if @packaging_type == "YOUR_PACKAGING "%>
+                <Dimensions>
+                  <Length><%= package.length -%></Length>
+                  <Width><%= package.width -%></Width>
+                  <Height><%= package.height -%></Height>
+                  <Units>CM</Units>
+                </Dimensions>            
+              <% end -%>              
+            </RequestedPackageLineItems>
+          <% end -%>          
+        <% end -%>                                  
       </RequestedShipment>
     </ProcessShipmentRequest>
   </soapenv:Body>
