more remote tests

--- a/lib/active_shipping/shipping/carriers/fedex/templates/shipment.xml.erb
+++ b/lib/active_shipping/shipping/carriers/fedex/templates/shipment.xml.erb
@@ -119,7 +119,7 @@
         <LabelSpecification>
           <LabelFormatType>COMMON2D</LabelFormatType>
           <ImageType>PDF</ImageType>
-          <LabelStockType>PAPER_LETTER</LabelStockType>
+          <LabelStockType>PAPER_7X4.75</LabelStockType>
         </LabelSpecification>                               
         <RateRequestTypes>ACCOUNT</RateRequestTypes>
         <PackageCount><%= @package_count %></PackageCount>
